--- a/ui/package.json
+++ b/ui/package.json
@@ -28,8 +28,8 @@
     "angular-jwt": "^0.1.6",
     "angular-material": "1.1.1",
     "angular-material-data-table": "^0.10.9",
-    "angular-material-icons": "^0.7.1",
     "angular-material-expansion-panel": "^0.7.2",
+    "angular-material-icons": "^0.7.1",
     "angular-messages": "1.5.8",
     "angular-route": "1.5.8",
     "angular-sanitize": "1.5.8",
@@ -45,6 +45,7 @@
     "angular-ui-ace": "^0.2.3",
     "angular-ui-router": "^0.3.1",
     "angular-websocket": "^2.0.1",
+    "axios": "^0.18.0",
     "base64-js": "^1.2.1",
     "brace": "^0.10.0",
     "canvas-gauges": "^2.0.9",
@@ -66,9 +67,9 @@
     "md-color-picker": "^0.2.6",
     "mdPickers": "git://github.com/alenaksu/mdPickers.git#0.7.5",
     "moment": "^2.15.0",
+    "ngFlowchart": "git://github.com/thingsboard/ngFlowchart.git#master",
     "ngclipboard": "^1.1.1",
     "ngreact": "^0.3.0",
-    "ngFlowchart": "git://github.com/thingsboard/ngFlowchart.git#master",
     "objectpath": "^1.2.1",
     "oclazyload": "^1.0.9",
     "raphael": "^2.2.7",
