--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BeiDouApp",
+  "name": "beidouapp",
   "private": true,
   "version": "2.1.3",
   "description": "BeiDouApp UI",
@@ -48,7 +48,6 @@
     "axios": "^0.18.0",
     "base64-js": "^1.2.1",
     "brace": "^0.10.0",
-    "bufferutil": "^4.0.0",
     "canvas-gauges": "^2.0.9",
     "cesium": "^1.51.0",
     "clipboard": "^1.5.15",
@@ -89,7 +88,6 @@
     "tinycolor2": "^1.4.1",
     "tooltipster": "^4.2.4",
     "typeface-roboto": "0.0.22",
-    "utf-8-validate": "^5.0.1",
     "v-accordion": "^1.6.0"
   },
   "devDependencies": {
@@ -129,7 +127,7 @@
     "sass-loader": "^4.0.2",
     "strip-pragma-loader": "^1.0.0",
     "style-loader": "^0.13.1",
-    "stylelint": "^9.5.0",
+    "stylelint": "^8.0.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^1.0.0",
