--- a/ui/package.json
+++ b/ui/package.json
@@ -70,6 +70,7 @@
     "ngFlowchart": "git://github.com/thingsboard/ngFlowchart.git#master",
     "ngclipboard": "^1.1.1",
     "ngreact": "^0.3.0",
+    "nrm": "^1.0.2",
     "objectpath": "^1.2.1",
     "oclazyload": "^1.0.9",
     "raphael": "^2.2.7",
