--- a/ui/package.json
+++ b/ui/package.json
@@ -22,11 +22,12 @@
     "angular-carousel": "^1.0.1",
     "angular-cookies": "1.5.8",
     "angular-drag-and-drop-lists": "^1.4.0",
+    "angular-fixed-table-header": "^0.2.1",
     "angular-fullscreen": "git://github.com/fabiobiondi/angular-fullscreen.git#master",
     "angular-gridster": "^0.13.14",
     "angular-hotkeys": "^1.7.0",
     "angular-jwt": "^0.1.6",
-    "angular-material": "1.1.1",
+    "angular-material": "1.1.9",
     "angular-material-data-table": "^0.10.9",
     "angular-material-expansion-panel": "^0.7.2",
     "angular-material-icons": "^0.7.1",
@@ -45,7 +46,6 @@
     "angular-ui-ace": "^0.2.3",
     "angular-ui-router": "^0.3.1",
     "angular-websocket": "^2.0.1",
-    "axios": "^0.18.0",
     "base64-js": "^1.2.1",
     "brace": "^0.10.0",
     "canvas-gauges": "^2.0.9",
@@ -65,7 +65,7 @@
     "leaflet-providers": "^1.1.17",
     "material-ui": "^0.16.1",
     "material-ui-number-input": "^5.0.16",
-    "md-color-picker": "^0.2.6",
+    "md-color-picker": "0.2.6",
     "mdPickers": "git://github.com/alenaksu/mdPickers.git#0.7.5",
     "moment": "^2.15.0",
     "ngFlowchart": "git://github.com/thingsboard/ngFlowchart.git#master",
@@ -84,7 +84,7 @@
     "reactcss": "^1.0.9",
     "sass-material-colors": "0.0.5",
     "schema-inspector": "^1.6.6",
-    "split.js": "^1.0.7",
+    "split.js": "1.3.5",
     "tinycolor2": "^1.4.1",
     "tooltipster": "^4.2.4",
     "typeface-roboto": "0.0.22",
@@ -125,9 +125,8 @@
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.2",
-    "strip-pragma-loader": "^1.0.0",
     "style-loader": "^0.13.1",
-    "stylelint": "^8.0.0",
+    "stylelint": "^9.5.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^1.0.0",
