--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -19,9 +19,9 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.BeiDouApp</groupId>
+        <groupId>org.thingsboard</groupId>
         <version>2.2.0</version>
-        <artifactId>BeiDouApp</artifactId>
+        <artifactId>thingsboard</artifactId>
     </parent>
     <groupId>org.BeiDouApp</groupId>
     <artifactId>ui</artifactId>
