--- a/ui/package.json
+++ b/ui/package.json
@@ -46,6 +46,7 @@
     "angular-ui-ace": "^0.2.3",
     "angular-ui-router": "^0.3.1",
     "angular-websocket": "^2.0.1",
+    "axios": "^0.18.0",
     "base64-js": "^1.2.1",
     "brace": "^0.10.0",
     "canvas-gauges": "^2.0.9",
