--- a/ui/.vscode/launch.json
+++ b/ui/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "启动程序",
-            "program": "${workspaceFolder}\\test\\demo-gps.js"
+            "program": "${workspaceFolder}\\test\\apitest.js"
         }
     ]
 }
