--- a/ui/package.json
+++ b/ui/package.json
@@ -138,7 +138,8 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.15.1",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-material-design-icons": "^0.1.0"
+    "webpack-material-design-icons": "^0.1.0",
+    "ws": "^6.1.2"
   },
   "engine": "node >= 5.9.0",
   "nyc": {
