--- a/ui/package.json
+++ b/ui/package.json
@@ -119,6 +119,7 @@
     "jsonminify": "^0.4.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "mqtt": "^2.18.8",
     "ng-annotate-loader": "^0.1.1",
     "ngtemplate-loader": "^1.3.1",
     "node-sass": "^4.5.3",
