--- a/application/src/main/resources/thingsboard.yml
+++ b/application/src/main/resources/thingsboard.yml
@@ -161,16 +161,16 @@ cassandra:
   query:
     read_consistency_level: "${CASSANDRA_READ_CONSISTENCY_LEVEL:ONE}"
     write_consistency_level: "${CASSANDRA_WRITE_CONSISTENCY_LEVEL:ONE}"
-    default_fetch_size: "${CASSANDRA_DEFAULT_FETCH_SIZE:2000}"
+    default_fetch_size: "${CASSANDRA_DEFAULT_FETCH_SIZE:20000}"
     # Specify partitioning size for timestamp key-value storage. Example MINUTES, HOURS, DAYS, MONTHS,INDEFINITE
     ts_key_value_partitioning: "${TS_KV_PARTITIONING:MONTHS}"
     ts_key_value_ttl: "${TS_KV_TTL:0}"
     events_ttl: "${TS_EVENTS_TTL:0}"
-    buffer_size: "${CASSANDRA_QUERY_BUFFER_SIZE:200000}"
-    concurrent_limit: "${CASSANDRA_QUERY_CONCURRENT_LIMIT:1000}"
+    buffer_size: "${CASSANDRA_QUERY_BUFFER_SIZE:2000000}"
+    concurrent_limit: "${CASSANDRA_QUERY_CONCURRENT_LIMIT:10000}"
     permit_max_wait_time: "${PERMIT_MAX_WAIT_TIME:120000}"
-    dispatcher_threads: "${CASSANDRA_QUERY_DISPATCHER_THREADS:2}"
-    callback_threads: "${CASSANDRA_QUERY_CALLBACK_THREADS:4}"
+    dispatcher_threads: "${CASSANDRA_QUERY_DISPATCHER_THREADS:16}"
+    callback_threads: "${CASSANDRA_QUERY_CALLBACK_THREADS:16}"
     poll_ms: "${CASSANDRA_QUERY_POLL_MS:50}"
     rate_limit_print_interval_ms: "${CASSANDRA_QUERY_RATE_LIMIT_PRINT_MS:10000}"
     tenant_rate_limits:
