--- a/file-server/pom.xml
+++ b/file-server/pom.xml
@@ -8,7 +8,7 @@
         <version>1.4.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.thingsboard</groupId>
+    <groupId>com.beidouapp</groupId>
     <artifactId>file-server</artifactId>
     <version>2.2.0</version>
     <name>Beidouapp File Server</name>
