--- a/ui/reporter/package.json
+++ b/ui/reporter/package.json
@@ -27,12 +27,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "browserify": "^15.0.0",
-    "docx-templates": "^2.9.0",
     "express": "^4.16.3",
-    "isomorphic-fetch": "2.2.1",
-    "node-echarts": "^1.1.4",
-    "prettier": "^1.14.2",
-    "yaqrcode": "^0.2.1"
+    "node-echarts": "^1.1.4"
   }
 }
