--- a/file-server/pom.xml
+++ b/file-server/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.beidouapp</groupId>
     <artifactId>file-server</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.0-SNAPSHOT</version>
     <name>Beidouapp File Server</name>
     <description>file server based on fastdfs</description>
 
