--- a/apiGateway/package.json
+++ b/apiGateway/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "swagger-ui-express": "^4.0.2",
     "winston": "^3.1.0"
   }
 }
