--- a/ui/.vscode/launch.json
+++ b/ui/.vscode/launch.json
@@ -9,8 +9,9 @@
             "request": "launch",
             "name": "启动程序",
             // "program": "${workspaceFolder}\\test\\demoRuleEngine.js"
-            "program": "${workspaceFolder}\\reporter\\server.js"
+            // "program": "${workspaceFolder}\\reporter\\server.js"
             // "program": "${workspaceFolder}\\test\\tsReport.js"
+            "program": "${workspaceFolder}\\test\\tsAlarmAndWarning.js"
         }
     ]
 }
