--- a/ui/.vscode/launch.json
+++ b/ui/.vscode/launch.json
@@ -11,7 +11,8 @@
             // "program": "${workspaceFolder}\\test\\demoRuleEngine.js"
             // "program": "${workspaceFolder}\\reporter\\server.js"
             // "program": "${workspaceFolder}\\test\\tsReport.js"
-            "program": "${workspaceFolder}\\test\\tsAlarmAndWarning.js"
+            // "program": "${workspaceFolder}\\test\\tsAlarmAndWarning.js"
+            "program": "${workspaceFolder}\\test\\warningRules.js"
         }
     ]
 }
