--- a/msa/web-ui/package.json
+++ b/msa/web-ui/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "bin": "server.js",
   "scripts": {
-    "install": "pkg -t node8-linux-x64,node8-win-x64 --out-path ./target . && node install.js",
+    "install": "pkg -t node8-linux-x64,node8-win-x64 --out-path ./target . && node --unsafe-prem install.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "WEB_FOLDER=./target/web nodemon server.js",
     "start-prod": "NODE_ENV=production nodemon server.js"
