--- a/msa/js-executor/pom.xml
+++ b/msa/js-executor/pom.xml
@@ -80,7 +80,7 @@
                             <goal>npm</goal>
                         </goals>
                         <configuration>
-                            <arguments>install</arguments>
+                            <arguments>install --unsafe-perm</arguments>
                         </configuration>
                     </execution>
                 </executions>
