--- a/application/src/main/resources/thingsboard.yml
+++ b/application/src/main/resources/thingsboard.yml
@@ -321,7 +321,8 @@ spring:
     database-platform: "${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}"
   datasource:
     driverClassName: "${SPRING_DRIVER_CLASS_NAME:org.postgresql.Driver}"
-    url: "${SPRING_DATASOURCE_URL:jdbc:postgresql://192.168.1.12:5432/thingsboard}"
+#    url: "${SPRING_DATASOURCE_URL:jdbc:postgresql://192.168.1.12:5432/thingsboard}"
+    url: "${SPRING_DATASOURCE_URL:jdbc:postgresql://192.168.1.16:5432/thingsboard}"
     username: "${SPRING_DATASOURCE_USERNAME:postgres}"
     password: "${SPRING_DATASOURCE_PASSWORD:beidouapp@psql}"
 
