/api/v1/{deviceToken}/validate 设备token验证接口

--- a/application/src/main/resources/thingsboard.yml
+++ b/application/src/main/resources/thingsboard.yml
@@ -449,7 +449,7 @@ transport:
     max_string_value_length: "${JSON_MAX_STRING_VALUE_LENGTH:0}"
   # Local HTTP transport parameters
   http:
-    enabled: "${HTTP_ENABLED:false}"
+    enabled: "${HTTP_ENABLED:true}"
     request_timeout: "${HTTP_REQUEST_TIMEOUT:60000}"
   # Local MQTT transport parameters
   mqtt:
