fs部署脚本修改

--- a/file-server/src/main/install/file-server_distributed_deployment/docker-compose.api.yml
+++ b/file-server/src/main/install/file-server_distributed_deployment/docker-compose.api.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   file-server:
-    build: .
+    build: ./file-server-api-distribute
     image: beidouapp/file-server
     container_name: file-server
     restart: always
