--- a/file-server/src/main/install/file-server_distributed_deployment/file-server-api-distribute/file-server.yml
+++ b/file-server/src/main/install/file-server_distributed_deployment/file-server-api-distribute/file-server.yml
@@ -17,4 +17,4 @@ logging:
   config: classpath:logback.xml
 tb:
   transport:
-    url: http://localhost/api/v1 #tb 服务器接口
+    url: ${TB_URL:http://localhost/api/v1} #tb 服务器接口
