修改ui pom配置，可通过参数跳过ui的npm-build

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -84,7 +84,10 @@
         <profile>
             <id>npm-build</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <!--<activeByDefault>true</activeByDefault>-->
+                <property>
+                    <name>!skipUiBuild</name>
+                </property>
             </activation>
             <build>
                 <plugins>
