--- a/apiGateway/config.json
+++ b/apiGateway/config.json
@@ -1,4 +1,10 @@
 {
+  "serverCfg_BK":{
+    "API":"http://cf.beidouapp.com:20002/api/",
+    "fileSVR":"http://cf.beidouapp.com:20002/",
+    "mqttBackendBUS":"cf.beidouapp.com:20002",
+    "SrsAPI":"http://ossrs.net:1985/api/"
+  },
   "serverCfg":{
     "API":"http://sm.schdri.com/api/",
     "fileSVR":"http://sm.schdri.com/",
