--- a/ui/package.json
+++ b/ui/package.json
@@ -53,6 +53,7 @@
     "cesium": "^1.51.0",
     "clipboard": "^1.5.15",
     "compass-sass-mixins": "^0.12.7",
+    "echarts": "^4.2.1",
     "event-source-polyfill": "0.0.9",
     "flot": "git://github.com/thingsboard/flot.git#0.9-work",
     "flot.curvedlines": "git://github.com/MichaelZinsmaier/CurvedLines.git#master",
