--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "start": "babel-node --max_old_space_size=4096 server.js",
-    "build": "cross-env LIMIT=8096 increase-memory-limit --max_old_space_size=4096 NODE_ENV=production webpack -p"
+    "build": "cross-env --max_old_space_size=4096 NODE_ENV=production webpack -p"
   },
   "dependencies": {
     "@flowjs/ng-flow": "^2.7.1",
@@ -50,7 +50,6 @@
     "base64-js": "^1.2.1",
     "brace": "^0.10.0",
     "canvas-gauges": "^2.0.9",
-    "cesium": "^1.51.0",
     "clipboard": "^1.5.15",
     "compass-sass-mixins": "^0.12.7",
     "echarts": "^4.2.1",
